re-fihisned caused i missed a q

--- a/1.md
+++ b/1.md
@@ -1,6 +1,8 @@
 # Homework 1
--  <u><strong>How Does The Internet Work?</strong></u> <br><br>
+-  <u><strong>How Does The Internet Work?</strong></u><br><br>
     The "visitor" makes a request or a URL site search and it send the request to Node.js. Node.js works with Express which manages the HTTP server. Express works witht the Database and returns data back to Express. If needs a template it connects with JSX which in return send the information requested back. Once Express has the reuested information from the visitor, it sends it back to them. <br><br>
 - <u><strong>What is the difference between backend and frontend?</strong></u><br><br>
 Backend is what goes on behind the scenes, the visitor collecting information from databases.
-Frontend is the display of the information on your screen such as, vidoes, pictures, text.
+Frontend is the display of the information on your screen such as, vidoes, pictures, text.<br><br>
+- <u><strong>What do HTML, CSS, and JavaScript do?</strong></u><br><br>
+HTML is the language used to display images, text onto the visitors screen. CSS is the tool used to style and position things on the users screen. JS is the platform used to preform all functionality to a webpage and can also be used to manipulate the HTML and the CSS from within.
