--- a/3.md
+++ b/3.md
@@ -1,10 +1,62 @@
 # Homework 3
 -  <u><strong>Index</strong></u><br>
     HTTP verb - **GET** <br>
-    Action<br>
+    Mongoose Method- **.find**<br>
+    View- **Index.jsx**<br>
+    Used similarly to a table of contents.<br>
+    Example-
+
+        app.get('/fruits', (req, res)=>{
+            Fruit.find({}, (error, allFruits)=>{
+                res.render('fruits/Index', {
+                    fruits: allFruits
+                });
+            });
+        });
+
+    <br>
 -  <u><strong>New</strong></u><br>
-    Hello <br><br>
+        HTTP verb - **GET** <br>
+    Mongoose Method- **none**<br>
+    View- **New.jsx**<br>
+    Used as a HTML form to create a new page.<br>
+    Example-<br>
+    
+
+        app.get('/fruits/new', (req, res) => {
+            res.render('fruits/New');
+        });
+<br>
+
 -  <u><strong>Create</strong></u><br>
-    Hello<br><br>
+    HTTP verb - **POST** <br>
+    Mongoose Method- **.create**<br>
+    View- **none**<br>
+    Used to create a new page.<br>
+    Example-<br>  
+
+        app.post('/fruits', (req, res)=>{
+            if(req.body.readyToEat === 'on'){
+                req.body.readyToEat = true;
+            } else {
+                req.body.readyToEat = false;
+            }
+            Fruit.create(req.body, (error, createdFruit)=>{
+                res.send(createdFruit);
+            });
+        });
+
 -  <u><strong>Show</strong></u><br>
-    Hello
+    HTTP verb - **GET** <br>
+    Mongoose Method- **.findById**<br>
+    View- **Show.jsx**<br>
+    Used similarly like turning to the selected page from the table of contents.<br>
+    Example-<br>
+
+        app.get('/fruits/:id', (req, res)=>{
+            Fruit.findById(req.params.id, (err, foundFruit) => {
+                res.render('fruits/Show', {
+                    fruit:foundFruit
+                });
+            });
+        });
